Coding Together Session #3: Completly reworked Parsing, Storing and Printing a Page