@@ -2,17 +2,16 @@ package crawler.reporter;
 
 import crawler.model.CrawlerConfig;
 import crawler.model.PageResult;
+import crawler.model.PageResult.Heading;
+import crawler.model.PageResult.Section;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.io.IOException;
-import java.io.StringWriter;
 import java.io.PrintWriter;
+import java.io.StringWriter;
 import java.net.URI;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
 
@@ -21,134 +20,152 @@ import static org.junit.jupiter.api.Assertions.*;
 class MarkdownReporterTest {
 
     private MarkdownReporter reporter;
-    private CrawlerConfig config;
+    private CrawlerConfig    config;
+    private URI             exampleUri;
+
+    private StringWriter buffer;
+    private PrintWriter  writer;
 
     @BeforeEach
-    void setup() {
-        reporter = new MarkdownReporter();
-        try {
-            config = new CrawlerConfig(URI.create("http://example.com"), 2, "example.com");
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
+    void setUp() throws Exception {
+        reporter   = new MarkdownReporter();
+        exampleUri = new URI("http://example.com");
+        config     = new CrawlerConfig(exampleUri, 2, "example.com");
+
+        buffer = new StringWriter();
+        writer = new PrintWriter(buffer);
+    }
+
+    private static String nl() {
+        return "\n";
+    }
+
+    private static String normalise(String s) {
+        return s.replace("\r\n", "\n");
     }
 
     @Test
-    void testWriteReport_CreatesOutputFile() throws IOException {
-        PageResult root = new PageResult(URI.create("http://example.com"), 0, false,
-                Collections.emptyList(), Collections.emptyList(), Collections.emptySet());
+    void writeReportHeader_producesExpectedMarkdown() {
+        reporter.writeReportHeader(config, writer);
+        writer.flush();
 
-        reporter.writeReport(root, config);
+        String expected = "# Crawl Report: http://example.com" + nl() +
+                "**Max Depth:** 2  "                 + nl() +
+                "**Domains:** example.com"            + nl() + nl() +
+                "---"                                 + nl() + nl();
 
-        Path outputPath = Path.of("report.md");
-        assertTrue(Files.exists(outputPath));
-
-        String content = Files.readString(outputPath);
-        assertTrue(content.contains("# Crawl Report: http://example.com"));
-
-        Files.deleteIfExists(outputPath);  // Cleanup after test
-    }
-
-
-    @Test
-    void testWriteReport_GeneratesCorrectHeader() {
-        StringWriter sw = new StringWriter();
-        PageResult root = new PageResult(URI.create("http://example.com"), 0, false,
-                Collections.emptyList(), Collections.emptyList(), Collections.emptySet());
-        reporter.writeToWriter(root, config, new PrintWriter(sw));
-
-        String output = sw.toString();
-        assertTrue(output.contains("# Crawl Report: http://example.com"));
-        assertTrue(output.contains("**Max Depth:** 2"));
-        assertTrue(output.contains("**Domains:** example.com"));
+        assertEquals(expected, normalise(buffer.toString()));
     }
 
     @Test
-    void testWritePage_IncludesBrokenStatus() {
-        StringWriter sw = new StringWriter();
-        PageResult brokenPage = new PageResult(URI.create("http://broken.com"), 1, true,
-                Collections.emptyList(), Collections.emptyList(), Collections.emptySet());
+    void writePageHeader_okPage() {
+        PageResult page = new PageResult(exampleUri, 1, false,
+                Collections.emptyList(), Collections.emptySet());
 
-        reporter.writePage(brokenPage, new PrintWriter(sw));
+        reporter.writePageHeader(page, writer);
+        writer.flush();
 
-        String output = sw.toString();
-        assertTrue(output.contains("**Status:** Broken"));
+        String expected = "## Page: http://example.com" + nl() +
+                "**Depth:** 1  "             + nl() +
+                "**Status:** OK"             + nl() + nl();
+
+        assertEquals(expected, normalise(buffer.toString()));
     }
 
     @Test
-    void testWritePage_IncludesHeadings() {
-        StringWriter sw = new StringWriter();
-        PageResult.Heading h1 = new PageResult.Heading(1, "Main Heading");
-        PageResult.Heading h2 = new PageResult.Heading(2, "Sub Heading");
-        PageResult pageWithHeadings = new PageResult(URI.create("http://example.com"), 0, false,
-                Arrays.asList(h1, h2), Collections.emptyList(), Collections.emptySet());
+    void writePageHeader_brokenPage() {
+        PageResult page = new PageResult(exampleUri, 1, true,
+                Collections.emptyList(), Collections.emptySet());
 
-        reporter.writePage(pageWithHeadings, new PrintWriter(sw));
+        reporter.writePageHeader(page, writer);
+        writer.flush();
 
-        String output = sw.toString();
-        assertTrue(output.contains("- H1: Main Heading"));
-        assertTrue(output.contains("  - H2: Sub Heading"));
+        String expected = "## Page: http://example.com" + nl() +
+                "**Depth:** 1  "             + nl() +
+                "**Status:** Broken"         + nl() + nl() + nl(); // extra blank‑line from println()
+
+        assertEquals(expected, normalise(buffer.toString()));
     }
 
     @Test
-    void testWritePage_IncludesLinks() {
-        StringWriter sw = new StringWriter();
-        URI link1 = URI.create("http://example.com/page1");
-        URI link2 = URI.create("http://example.com/page2");
-        PageResult pageWithLinks = new PageResult(URI.create("http://example.com"), 0, false,
-                Collections.emptyList(), Arrays.asList(link1, link2), Collections.emptySet());
+    void writePageContent_whenEmpty() {
+        PageResult page = new PageResult(exampleUri, 0, false,
+                Collections.emptyList(), Collections.emptySet());
 
-        reporter.writePage(pageWithLinks, new PrintWriter(sw));
+        reporter.writePageContent(page, writer);
+        writer.flush();
 
-        String output = sw.toString();
-        assertTrue(output.contains("- http://example.com/page1"));
-        assertTrue(output.contains("- http://example.com/page2"));
+        String expected = "### Content" + nl() + nl() +
+                "*(No headings or links found)*" + nl() + nl();
+
+        assertEquals(expected, normalise(buffer.toString()));
     }
 
     @Test
-    void testWritePage_RecursiveChildrenPages() {
-        StringWriter sw = new StringWriter();
+    void writeSectionWithLinks_writesCorrectBlockQuote() {
+        Heading heading = new Heading(2, "Test Heading");
+        URI link1 = URI.create("http://example.com/link1");
+        URI link2 = URI.create("http://example.com/link2");
+        Section section = new Section(heading, new LinkedHashSet<>(List.of(link1, link2)));
+
+        reporter.writeSectionWithLinks(section, writer);
+        writer.flush();
+
+        String expected =
+                ">>**H2: Test Heading**"      + nl() +
+                        ">>* http://example.com/link1" + nl() +
+                        ">>* http://example.com/link2" + nl() + nl();
+
+        assertEquals(expected, normalise(buffer.toString()));
+    }
+
+    @Test
+    void writeLinksBeforeHeadings_onlyFirstPreHeadingBlockIsWritten() {
+        Heading rootHeading = new Heading(0, "Page Root");
+        URI     link1       = URI.create("http://example.com/root1");
+        URI     link2       = URI.create("http://example.com/root2");
+        Section rootSection = new Section(rootHeading, new LinkedHashSet<>(List.of(link1, link2)));
+
+        PageResult page = new PageResult(exampleUri, 0, false,
+                List.of(rootSection), Collections.emptySet());
+
+        reporter.writeLinksBeforeHeadings(page, writer);
+        writer.flush();
+
+        String expected = "**Links Before First Heading:**" + nl() +
+                "* http://example.com/root1"    + nl() +
+                "* http://example.com/root2"    + nl() + nl();
+
+        assertEquals(expected, normalise(buffer.toString()));
+    }
+
+    @Test
+    void writePage_recursivelyWritesChildrenSeparatedByRules() {
+        Heading h1 = new Heading(1, "Main Heading");
+        Section rootSection = new Section(h1, new LinkedHashSet<>(List.of(URI.create("http://example.com/main"))));
+
+        Heading h2 = new Heading(2, "Sub Heading");
+        Section childSection = new Section(h2, new LinkedHashSet<>(List.of(URI.create("http://example.com/sub"))));
+
         PageResult childPage = new PageResult(URI.create("http://example.com/child"), 1, false,
-                Collections.singletonList(new PageResult.Heading(1, "Child Heading")),
-                Collections.singletonList(URI.create("http://example.com/link")),
-                Collections.emptySet());
+                List.of(childSection), Collections.emptySet());
 
-        PageResult root = new PageResult(URI.create("http://example.com"), 0, false,
-                Collections.singletonList(new PageResult.Heading(1, "Root Heading")),
-                Collections.singletonList(URI.create("http://example.com/rootlink")),
-                Set.of(childPage));
+        PageResult rootPage = new PageResult(exampleUri, 0, false,
+                List.of(rootSection), Set.of(childPage));
 
-        reporter.writePage(root, new PrintWriter(sw));
+        reporter.writePage(rootPage, writer);
+        writer.flush();
 
-        String output = sw.toString();
-        assertTrue(output.contains("## Page: http://example.com"));
-        assertTrue(output.contains("- H1: Root Heading"));
-        assertTrue(output.contains("- http://example.com/rootlink"));
+        String out = normalise(buffer.toString());
 
-        assertTrue(output.contains("## Page: http://example.com/child"));
-        assertTrue(output.contains("- H1: Child Heading"));
-        assertTrue(output.contains("- http://example.com/link"));
+        // there should be exactly two page headers – one for the root and one for the child
+        long occurrences = out.lines().filter(l -> l.startsWith("## Page:")).count();
+        assertEquals(2, occurrences);
+
+        assertTrue(out.contains("## Page: http://example.com"));
+        assertTrue(out.contains("## Page: http://example.com/child"));
+
+        // make sure the horizontal rule (---) between pages is present
+        assertTrue(out.contains("---"));
     }
-
-    @Test
-    void testWritePage_EmptyHeadingsAndLinks() {
-        StringWriter sw = new StringWriter();
-        PageResult emptyPage = new PageResult(URI.create("http://example.com/empty"), 1, false,
-                Collections.emptyList(), Collections.emptyList(), Collections.emptySet());
-
-        reporter.writePage(emptyPage, new PrintWriter(sw));
-
-        List<String> lines = Arrays.asList(sw.toString().split("\\R"));
-
-        // Check headings
-        int headingsIndex = lines.indexOf("### Headings");
-        assertTrue(headingsIndex >= 0, "Headings header missing.");
-        assertEquals("- (none)", lines.get(headingsIndex + 1).trim(), "Headings content incorrect.");
-
-        // Check links
-        int linksIndex = lines.indexOf("### Links");
-        assertTrue(linksIndex >= 0, "Links header missing.");
-        assertEquals("- (none)", lines.get(linksIndex + 1).trim(), "Links content incorrect.");
-    }
-
 }
